@@ -52,5 +52,12 @@ Feature: Multi Elements
     And the value of checkbox 2 should be "checkbox 2"
     And the value of checkbox 3 should be "checkbox 3"
     
+  Scenario: Selecting radio buttons
+    When I select the radio button with class "radio"
+    Then I should have 3 radio buttons
+    And the value of radio button 1 should be "radio 1"
+    And the value of radio button 2 should be "radio 2"
+    And the value of radio button 3 should be "radio 3"
+
 
 
