@@ -267,6 +267,21 @@ module PageObject
     end
 
     #
+    # Finds all radio button elements that match the provided identifier
+    #
+    # @param [Hash] identifier how we find a radio button.  You can use a multiple paramaters
+    #   by combining of any of the following except xpath.  The valid keys are:
+    #   * :class => Watir and Selenium
+    #   * :id => Watir and Selenium
+    #   * :index => Watir and Selenium
+    #   * :name => Watir and Selenium
+    #   * :xpath => Watir and Selenium
+    #
+    def radio_button_elements(identifier)
+      platform.radio_buttons_for(identifier.clone)
+    end
+
+    #
     # Finds a div
     #
     # @param [Hash] identifier how we find a div.  You can use a multiple paramaters
