@@ -100,6 +100,13 @@ describe PageObject::ElementLocators do
       element = watir_page_object.radio_button_element(:id => 'blah')
       element.should be_instance_of PageObject::Elements::RadioButton
     end
+
+    it "should find all radio buttons" do
+      watir_browser.should_receive(:radios).with(:id => 'blah').and_return([watir_browser])
+      elements = watir_page_object.radio_button_elements(:id => 'blah')
+      elements[0].should be_instance_of PageObject::Elements::RadioButton 
+
+    end
     
     it "should find a div" do
       watir_browser.should_receive(:div).with(:id => 'blah').and_return(watir_browser)
@@ -297,6 +304,12 @@ describe PageObject::ElementLocators do
       selenium_browser.should_receive(:find_element).with(:id, 'blah').and_return(selenium_browser)
       element = selenium_page_object.radio_button_element(:id => 'blah')
       element.should be_instance_of PageObject::Elements::RadioButton
+    end
+
+    it "should find all radio button elements" do
+      selenium_browser.should_receive(:find_elements).with(:id, 'blah').and_return([selenium_browser])
+      elements = selenium_page_object.radio_button_elements(:id => 'blah')
+      elements[0].should be_instance_of PageObject::Elements::RadioButton 
     end
     
     it "should find a div" do
