@@ -7,6 +7,7 @@
   * Added #select_list_elements to ElementLocators
   * Added #link_elements to ElementLocators
   * Added #checkbox_elements to ElementLocators
+  * Added #radio_button_elements to ElementLocators
   * Added #navigate_to to PageFactory to navigate to a page through previous pages
   * Added #continue_navigation_to to PageFactory which begins at @current_page
   * Added routes to PageFactory to collect routes through the site
